[project]
name = "interview-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.9",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.46.0",
]
